--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ dependencies = [
     "pdfplumber",
 ]
 
+[project.scripts]
+pdf-to-csv = "statement_refinery.pdf_to_csv:main"
+
 [project.optional-dependencies]
 # Development dependencies for linting, type checking and tests
 dev = [
