--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,7 +57,7 @@ jobs:
       - name: PyTest + Coverage
         id: tests
         continue-on-error: true
-        run: pytest -q --cov=statement_refinery --cov-fail-under=90
+        run: pytest -ra -vv --cov=statement_refinery --cov-report=term-missing --cov-fail-under=90
 
       # auto-patch loop if tests failed
       - name: Evolve patch loop
@@ -67,4 +67,4 @@ jobs:
       # confirm everything green after patch
       - name: Re-run tests
         if: always()
-        run: pytest -q --cov=statement_refinery --cov-fail-under=90
+        run: pytest -ra -vv --cov=statement_refinery --cov-report=term-missing --cov-fail-under=90
