--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,6 +17,9 @@ env:
 jobs:
   static:
     runs-on: ubuntu-latest
+    env:
+      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+      GITHUB_TOKEN:   ${{ secrets.PERSONAL_ACCESS_TOKEN_CLASSIC }}
     steps:
       - uses: actions/checkout@v4
 
@@ -41,6 +44,9 @@ jobs:
   tests-evolve:
     needs: static
     runs-on: ubuntu-latest
+    env:
+      OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+      GITHUB_TOKEN:   ${{ secrets.PERSONAL_ACCESS_TOKEN_CLASSIC }}
     steps:
       - uses: actions/checkout@v4
 
@@ -64,7 +70,7 @@ jobs:
         if: steps.tests.outcome == 'failure' || env.FORCE_EVOLVE == '1'
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN:   ${{ secrets.PERSONAL_ACCESS_TOKEN_CLASSIC }}
         run: python .github/tools/evolve.py
 
       # confirm everything green after patch
