--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,16 +17,14 @@ dependencies = [
 [project.scripts]
 pdf-to-csv = "statement_refinery.pdf_to_csv:main"
 
-[project.optional-dependencies]
+[project.optional-dependencies.dev]
 # Development dependencies for linting, type checking and tests
-dev = [
-    "ruff",
-    "black",
-    "pytest",
-    "pytest-cov",
-    "mypy",
-    "openai>=1.0",
-]
+ruff = "*"
+black = "*"
+pytest = "*"
+pytest-cov = "*"
+mypy = "*"
+openai = "*"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
