--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,6 +19,9 @@ env:
 jobs:
   static:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        task: [ruff, black, mypy]
     env:
       OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       GITHUB_TOKEN:   ${{ secrets.PERSONAL_ACCESS_TOKEN_CLASSIC }}
@@ -30,18 +33,26 @@ jobs:
           python-version: '3.12'
           cache: 'pip'
 
-      - name: Install dev deps
+      - name: Cache lint data
+        uses: actions/cache@v3
+        with:
+          path: |
+            .pytest_cache
+            .ruff_cache
+          key: ${{ runner.os }}-${{ matrix.task }}-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-${{ matrix.task }}-
 
+      - name: Install dev deps
         run: pip install -e '.[dev]'
 
-      - name: Ruff lint
-        run: ruff check .
-
-      - name: Black format check
-        run: black --check .
-
-      - name: MyPy type check
-        run: mypy src/
+      - name: Run ${{ matrix.task }}
+        run: |
+          case "${{ matrix.task }}" in
+            ruff) ruff check . ;;
+            black) black --check . ;;
+            mypy) mypy src/ ;;
+          esac
 
   tests-evolve:
     needs: static
@@ -57,6 +68,16 @@ jobs:
           python-version: '3.12'
           cache: 'pip'
 
+      - name: Cache test data
+        uses: actions/cache@v3
+        with:
+          path: |
+            .pytest_cache
+            .ruff_cache
+          key: ${{ runner.os }}-tests-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-tests-
+
       - name: Install dev deps
 
         run: pip install -e '.[dev]'
@@ -69,12 +90,24 @@ jobs:
 
       # auto-patch loop if tests failed or FORCE_EVOLVE=1
       - name: Evolve patch loop
+        id: evolve
         if: steps.tests.outcome == 'failure' || env.FORCE_EVOLVE == '1'
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           GITHUB_TOKEN:   ${{ secrets.PERSONAL_ACCESS_TOKEN_CLASSIC }}
 
         run: python .github/tools/evolve.py
+
+      - name: Report evolve failure
+        if: steps.evolve.outcome == 'failure'
+        env:
+          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN_CLASSIC }}
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+        run: |
+          echo "evolve.py exited without opening a PR." >> $GITHUB_STEP_SUMMARY
+          if [ -n "$PR_NUMBER" ]; then
+            gh pr comment "$PR_NUMBER" -b "evolve.py exited without opening a PR."
+          fi
 
       # confirm everything green after patch
       - name: Re-run tests
