Remove import duplication and update formatting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,3 +31,11 @@ dev = [
 [tool.setuptools]
 package-dir = {"" = "src"}
 packages = ["statement_refinery"]
+
+[tool.ruff]
+target-version = "py312"
+line-length = 88
+
+[tool.black]
+target-version = ["py312"]
+line-length = 88
