--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -65,7 +65,10 @@ jobs:
       - name: PyTest + Coverage
         id: tests
         continue-on-error: true
-        run: pytest -ra -vv --cov=statement_refinery --cov-report=term-missing --cov-fail-under=90
+        run: |
+          pytest -ra -vv --cov=statement_refinery \
+                 --cov-report=term-missing --cov-report=xml \
+                 --cov-fail-under=90
 
       # auto-patch loop if tests failed or FORCE_EVOLVE=1
       - name: Evolve patch loop
@@ -79,7 +82,16 @@ jobs:
       # confirm everything green after patch
       - name: Re-run tests
         if: always()
-        run: pytest -ra -vv --cov=statement_refinery --cov-report=term-missing --cov-fail-under=90
+        run: |
+          pytest -ra -vv --cov=statement_refinery \
+                 --cov-report=term-missing --cov-report=xml \
+                 --cov-fail-under=90
+
+      - name: Upload coverage
+        if: always()
+        uses: codecov/codecov-action@v4
+        with:
+          files: coverage.xml
 
       - name: Check parser accuracy
         if: always()
