--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -106,10 +106,18 @@ jobs:
                  --cov-report=term-missing --cov-report=xml \
                  --cov-fail-under=90
 
+      - name: Check parser accuracy
+        id: accuracy
+        continue-on-error: true
+        run: python scripts/check_accuracy.py --threshold 99
+
       # auto-patch loop if tests failed or FORCE_EVOLVE=1
       - name: Evolve patch loop
         id: evolve
-        if: steps.tests.outcome == 'failure' || env.FORCE_EVOLVE == '1'
+        if: |
+          steps.tests.outcome == 'failure' ||
+          steps.accuracy.outcome == 'failure' ||
+          env.FORCE_EVOLVE == '1'
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           GITHUB_TOKEN:   ${{ secrets.BOT_PAT }}
@@ -134,6 +142,10 @@ jobs:
           pytest -ra -vv --cov=statement_refinery \
                  --cov-report=term-missing --cov-report=xml \
                  --cov-fail-under=90
+
+      - name: Re-check parser accuracy
+        if: always()
+        run: python scripts/check_accuracy.py --threshold 99
 
       - name: Upload coverage
         if: always()
