--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,6 +41,9 @@ jobs:
           python-version: '3.12'
           cache: 'pip'
 
+      - name: Prepare diagnostics dir
+        run: mkdir -p diagnostics
+
       - name: Cache lint data
         uses: actions/cache@v3
         with:
@@ -68,6 +71,7 @@ jobs:
     env:
       OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       GITHUB_TOKEN:   ${{ secrets.BOT_PAT }}
+      FORCE_EVOLVE: ${{ env.FORCE_EVOLVE }}
     steps:
       - uses: actions/checkout@v4
 
@@ -104,12 +108,13 @@ jobs:
         run: |
           pytest -ra -vv --cov=statement_refinery \
                  --cov-report=term-missing --cov-report=xml \
-                 --cov-fail-under=90
+                 --cov-fail-under=90 | tee diagnostics/step-tests.txt
 
       - name: Check parser accuracy
         id: accuracy
         continue-on-error: true
-        run: python scripts/check_accuracy.py --threshold 99 --summary-file accuracy_summary.json --csv-dir csv_output
+        run: |
+          python scripts/check_accuracy.py --threshold 99 --summary-file accuracy_summary.json --csv-dir csv_output | tee diagnostics/step-accuracy.txt
 
       # auto-patch loop runs only when tests or accuracy fail
       - name: Check evolve prerequisites
@@ -153,13 +158,14 @@ jobs:
         if: |
           (steps.tests.outcome == 'failure' ||
            needs.static.result == 'failure' ||
-           steps.accuracy.outcome == 'failure') &&
+           steps.accuracy.outcome == 'failure' ||
+           env.FORCE_EVOLVE == '1') &&
           steps.evolve_prereqs.outcome == 'success'
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           GITHUB_TOKEN:   ${{ secrets.BOT_PAT }}
 
-        run: python .github/tools/evolve.py
+        run: python .github/tools/evolve.py | tee diagnostics/step-evolve.txt
 
 
       - name: Report evolve failure
@@ -179,11 +185,12 @@ jobs:
         run: |
           pytest -ra -vv --cov=statement_refinery \
                  --cov-report=term-missing --cov-report=xml \
-                 --cov-fail-under=90
+                 --cov-fail-under=90 | tee diagnostics/step-tests-rerun.txt
 
       - name: Re-check parser accuracy
         if: steps.evolve.outcome == 'success'
-        run: python scripts/check_accuracy.py --threshold 99
+        run: |
+          python scripts/check_accuracy.py --threshold 99 | tee diagnostics/step-accuracy-rerun.txt
 
       - name: Upload coverage
         if: always() && env.CODECOV_TOKEN != '' && hashFiles('coverage.xml') != ''
@@ -207,6 +214,13 @@ jobs:
         with:
           name: parser-csv
           path: csv_output/
+
+      - name: Upload step logs
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: step-logs
+          path: diagnostics/step-*.txt
 
       - name: Summarize results
         if: always()
@@ -254,5 +268,13 @@ jobs:
         run: pip install -e '.[dev]'
 
       - name: Check parser accuracy
-        run: python scripts/check_accuracy.py --csv-dir csv_output
+        run: |
+          python scripts/check_accuracy.py --csv-dir csv_output | tee diagnostics/step-golden.txt
+
+      - name: Upload golden logs
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: golden-logs
+          path: diagnostics/step-golden.txt
 
