--- a/.gitignore
+++ b/.gitignore
@@ -1,157 +1,49 @@
-.env
-.env.*
-!.env.example
-
-# Byte-compiled / optimized / DLL files
+# Python
 __pycache__/
 *.py[cod]
-
-# C extensions
+*$py.class
 *.so
-
-# Distribution / packaging
 .Python
 build/
-develop-eggs/
 dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-var/
-sdist/
 *.egg-info/
 .installed.cfg
 *.egg
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-logs/
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don’t work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored by users who manage environments using poetry.
-#poetry.lock
-
-# pdm
-.pdm.toml
-__pypackages__/
-
-# pdm v1
-.pdm-
-
-# Hatch
-.hatch/
-
-# Pyre type checker
-.pyre/
-
-# mypy
-.mypy_cache/
-.dmypy.json
-.dmypy
-
-# Pytype
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# VS Code
-.vscode/
-
-# Ruff
-.ruff_cache/
-
-# Virtual env
-venv/
-.venv/
-ENV/
+# Virtual environments
+.env
+.venv
 env/
+venv/
+ENV/
+
+# Coverage
+.coverage
+.coverage.*
+.cache
+coverage.xml
+coverage.json
+htmlcov/
+.pytest_cache/
 
 # IDEs
 .idea/
+.vscode/
+*.swp
+*.swo
 *.sublime-project
 *.sublime-workspace
 
-# Temporary files
-*.tmp
+# Linters
+.ruff_cache/
+.mypy_cache/
+.dmypy.json
 
-# Build outputs
-outputs/
-
-# Others
-*.DS_Store
+# System files
+.DS_Store
 Thumbs.db
 
-# Itaú statement files (non-test assets)
-itau_*.pdf
-itau_*.csv
-
-# Keep official golden samples under tests/data
-!tests/data/itau_*.pdf
-!tests/data/golden_*.csv
-
-# Diagnostics output
+# Project specific
 diagnostics/
 diagnostics/*.csv
 tests/debug/
@@ -159,3 +51,18 @@ tests/debug/
 # Parser outputs
 csv_output/*
 !csv_output/.gitkeep
+
+# Itaú statement files (non-test assets)
+itau_*.pdf
+itau_*.csv
+
+# Keep official golden samples
+!tests/data/itau_*.pdf
+!tests/data/golden_*.csv
+
+# Build outputs
+outputs/
+summary.md
+summary.txt
+*.log
+
