--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
 ]
 
 [project.scripts]
-pdf-to-csv = "statement_refinery.pdf_to_csv:main"
+evolve = "statement_refinery.cli:main"
 
 [project.optional-dependencies]
 # Development dependencies for linting, type checking and tests
