--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,7 @@ on:
 
 env:
   OPENAI_MODEL: gpt-4
-  MAX_TOKENS: '200000'
+  MAX_TOKENS: '5000000'
   MAX_ATTEMPTS: '5'
 
 jobs:
@@ -30,6 +30,9 @@ jobs:
 
       - name: Install dependencies
         run: pip install -e '.[dev]'
+
+      - name: Run pre-commit
+        run: pre-commit run --all-files --show-diff-on-failure
 
       # Static analysis
       - name: Run linters
