ci: fix mypy duplicate module error with --explicit-package-bases

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,7 +43,7 @@ jobs:
         run: |
           ruff check . | tee diagnostics/lint.txt
           black --check . | tee -a diagnostics/lint.txt
-          mypy src/ | tee -a diagnostics/lint.txt
+          mypy src/ --explicit-package-bases | tee -a diagnostics/lint.txt
 
       # First pass
       - name: Run tests
