bootstrap: drop sentinel, auto-format

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,3 +8,14 @@ repos:
     hooks:
       - id: black
         args: ["--check", "."]
+
+  - repo: local
+    hooks:
+      - id: export-ai-patch
+        name: Export AI Patch
+        entry: cp diagnostics/ai-patch-unapplied.patch exported-ai-patch.patch || true
+        language: system
+        always_run: true
+        pass_filenames: false
+        verbose: true
+        description: "Export the AI patch for workflow artifacts even if patching fails."
