--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,7 @@ repos:
     hooks:
       - id: export-ai-patch
         name: Export AI Patch
-        entry: cp diagnostics/ai-patch-unapplied.patch exported-ai-patch.patch || true
+        entry: bash -c 'cp diagnostics/ai-patch-unapplied.patch exported-ai-patch.patch || true'
         language: system
         always_run: true
         pass_filenames: false
