--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,26 +2,33 @@ repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.3.0
     hooks:
-      - id: ruff-format
+      - id: ruff
         name: ruff format (auto-fix)
-        entry: ruff format .
-        language: python
+        args: ["format", "."]
         pass_filenames: false
         always_run: true
         description: "Auto-format code with ruff before checking."
       - id: ruff
+        name: ruff check
+        args: ["check", "."]
+        pass_filenames: false
+        always_run: true
+        description: "Check code style with ruff."
   - repo: https://github.com/psf/black
     rev: 24.4.2
     hooks:
-      - id: black-format
+      - id: black
         name: black format (auto-fix)
-        entry: black .
-        language: python
+        args: ["."]
         pass_filenames: false
         always_run: true
         description: "Auto-format code with black before checking."
       - id: black
+        name: black check
         args: ["--check", "."]
+        pass_filenames: false
+        always_run: true
+        description: "Check code style with black."
 
   - repo: local
     hooks:
