--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,9 +8,10 @@ repos:
         always_run: true
         description: "Auto-fix code style with ruff."
       - id: ruff-format
+        args: [--fix]
         name: ruff (format)
         always_run: true
-        description: "Check code style with ruff."
+        description: "Auto-fix code style with ruff (format only)."
   - repo: https://github.com/psf/black
     rev: 25.1.0
     hooks:
