Fix core AI patch loop logic and resolve repository issues
- Fix accuracy script unpacking bug (ValueError with 2 vs 5 values)
- Install pdfplumber dependency for full PDF parsing
- Improve edge case handling in parse_statement_line function
- Fix CI workflow validation mismatch between AI and re-run checks
- Disable FORCE_EVOLVE to prevent unnecessary patches when tests pass
- Add comprehensive validation suite to evolve.py matching CI re-run
- Fix Makefile tab formatting issues
- Add AGENT.md with build commands and code style guidelines

Resolves the issue where AI patches would pass initial validation but fail
re-run checks due to different validation criteria being used.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     env:
-      FORCE_EVOLVE: 1
+      FORCE_EVOLVE: 0  # Only run AI patch when tests actually fail
     steps:
       - uses: actions/checkout@v4
 
