Fix webhook to send ALL diagnostics files, not just .txt
- Change webhook pattern from diagnostics/*.txt to diagnostics/*
- Send all file types (.json, .txt, .py, etc.)
- Add X-File-Name header to preserve original filename
- Update log receiver to use original filename with timestamp prefix

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -150,10 +150,12 @@ jobs:
           if [ -n "$LOG_WEBHOOK_URL" ]; then
             echo "📡 Webhook URL configured, sending logs..."
             found_files=0
-            for f in diagnostics/*.txt; do
+            # Send ALL files in diagnostics directory (txt, json, etc.)
+            for f in diagnostics/*; do
               if [ -f "$f" ]; then
                 found_files=$((found_files + 1))
-                echo "📤 Sending log: $f (size: $(stat -f%z "$f" 2>/dev/null || stat -c%s "$f" 2>/dev/null || echo "unknown") bytes)"
+                file_size=$(stat -f%z "$f" 2>/dev/null || stat -c%s "$f" 2>/dev/null || echo "unknown")
+                echo "📤 Sending file: $f (size: ${file_size} bytes)"
                 
                 # Remove -f flag to see HTTP errors, add timeout
                 if curl -sS --connect-timeout 10 --max-time 30 \
@@ -161,6 +163,7 @@ jobs:
                   -H "X-Repo-Key: ${{ github.repository_owner }}-${{ github.event.repository.name }}" \
                   -H "X-Branch: ${{ github.ref_name }}" \
                   -H "X-Run-ID: ${{ github.run_id }}" \
+                  -H "X-File-Name: $(basename "$f")" \
                   --data-binary "@${f}" \
                   "$LOG_WEBHOOK_URL"; then
                   echo "✅ Successfully sent: $f"
