🔧 CRITICAL: Fix AI training logic
- Created AI_AGENT_INSTRUCTIONS.md with clear mission
- Added ai_focused_accuracy.py for real financial accuracy
- Updated CI to use real accuracy metrics, not fake CSV matching
- Revealed even 'golden' CSVs are broken (0/2 baselines working)
- AI agent now has clear target: improve from 65% to 99% financial accuracy
- Focus on missing BRL amounts, not misleading CSV comparisons

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -77,6 +77,7 @@ jobs:
           python scripts/check_accuracy.py --threshold 99 \
                  --summary-file diagnostics/accuracy.json \
                  --csv-dir csv_output | tee diagnostics/accuracy.txt
+          python scripts/ai_focused_accuracy.py | tee diagnostics/ai_focused_accuracy.txt
 
       # Auto-patch if needed
       - name: Run auto-patch
