🔧 Fix pre-commit issues + Add CLI entry point
- Fixed Black formatting across all Python files
- Resolved Ruff lint issues (removed unused variable, fixed bare except)
- Added missing CLI entry point (cli.py) for evolve command
- Configured Ruff to ignore E402 in scripts (needed for sys.path modifications)
- All lint checks now pass - ready for AI agent evolution loop!

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
 ]
 
 [project.scripts]
-evolve = "statement_refinery.cli:main"
+evolve = "statement_refinery.cli:main_cli"
 
 [project.optional-dependencies]
 # Development dependencies for linting, type checking and tests
@@ -38,6 +38,9 @@ packages = ["statement_refinery"]
 [tool.ruff]
 target-version = "py312"
 line-length = 88
+
+[tool.ruff.lint.per-file-ignores]
+"scripts/*.py" = ["E402"]  # Allow module imports after sys.path modifications
 
 [tool.black]
 target-version = ["py312"]
