🚀 FORCE AI EVOLVE: Test AI agent
- Set FORCE_EVOLVE=1 to trigger AI agent regardless of test outcomes
- Testing the complete AI improvement loop
- Should generate auto-PR with parser improvements
- Will analyze real accuracy data (65% → 99% target)

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     env:
-      FORCE_EVOLVE: 0  # Only run AI patch when tests actually fail
+      FORCE_EVOLVE: 1  # Force AI patch to test the evolve loop
     steps:
       - uses: actions/checkout@v4
 
