--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -34,6 +34,8 @@ jobs:
         run: pip install -e '.[dev]'
 
       - name: Run pre-commit
+        id: pre-commit
+        continue-on-error: true
         run: pre-commit run --all-files --show-diff-on-failure
         env:
           GIT_ASKPASS: "true"
@@ -84,7 +86,8 @@ jobs:
         id: evolve
         if: |
           env.FORCE_EVOLVE == '1' || (
-            (steps.lint.outcome == 'failure' ||
+            (steps.pre-commit.outcome == 'failure' ||
+             steps.lint.outcome == 'failure' ||
              steps.tests.outcome == 'failure' ||
              steps.accuracy.outcome == 'failure') &&
             github.event_name != 'pull_request'
